fixed intro button alignment

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ header img {
   color: light-dark(white, #e0dde2);
   font-size: 20px;
   margin: 10px;
-  margin-left: 0px;
+  margin-left: 0px !important;
   font-weight: bold;
   background-color: light-dark(#9750df, #9750df);
   transition: all 50ms ease-in-out;
